--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrp",
-  "homepage": "https://pawelplutauek20.github.io/mrp",
+  "homepage": "https://ego6ua.github.io/mrp-task/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
